add basic medadata for SEO

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/svg+xml" href="/logo.svg" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<title>Word Search II Algorithm Visualization | Interactive DFS Backtracking Demo</title>
+	<meta name="description"
+		content="Interactive visualization of the Word Search II algorithm demonstrating DFS backtracking as it finds multiple words in a board of characters. Step through the algorithm or watch it run automatically." />
+	<meta name="keywords"
+		content="algorithm visualization, word search, DFS, backtracking, leetcode, programming, computer science, interactive demo" />
+	<meta name="author" content="Tony Montemuro" />
+
+	<meta name="robots" content="index, follow" />
+</head>
+
+<body>
+	<div id="root"></div>
+	<script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
