--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<meta name="author" content="Tony Montemuro" />
 
 	<meta name="robots" content="index, follow" />
+	<link rel="canonical" href="https://word-search-ii-visualizer.tonyamontemuro.workers.dev/" />
 </head>
 
 <body>
